--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: main
           <figcaption>{{page.fig-caption}}</figcaption>
         {% endif %}
       </figure>
-    </div> <!-- End Page Cover Image --> -->
+    </div>-->
     {% else %}
     {% endif %}
     <div class="wrap-content">
